// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacer スナップショット X 1`] = `
<body>
  <div>
    <div
      style="display: flex;"
    >
      <div
        style="border-radius: var(--radius-100__13jk9q11g); width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;"
      />
      <div
        aria-hidden="true"
        class="spacer__1k4u8xae spacer_spacerStyle_x_200__1k4u8xai spacer_spacerStyle_variants_x_200__1k4u8xa3"
      />
      <div
        style="border-radius: var(--radius-100__13jk9q11g); width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;"
      />
    </div>
  </div>
</body>
`;

exports[`Spacer スナップショット Y 1`] = `
<body>
  <div>
    <div>
      <div
        style="border-radius: var(--radius-100__13jk9q11g); width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;"
      />
      <div
        aria-hidden="true"
        class="spacer__1k4u8xae spacer_spacerStyle_y_200__1k4u8xap spacer_spacerStyle_variants_y_200__1k4u8xaa"
      />
      <div
        style="border-radius: var(--radius-100__13jk9q11g); width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;"
      />
    </div>
  </div>
</body>
`;
